samples/_failures_safe/1761371726_6508c8_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_5de38527.c: In function ‘main’:
./samples/SAFE/__tmp_5de38527.c:144:15: error: expected ‘)’ at end of input
  144 |     if (sscanf
      |        ~      ^
      |               )
./samples/SAFE/__tmp_5de38527.c:144:5: error: expected declaration or statement at end of input
  144 |     if (sscanf
      |     ^~
